package com.subterranean_security.crimson.core.proto.net;

import "net/Delta.proto";
message GroupChallenge_RQ {
	required string group_name = 1;
	required string magic = 2;
}

message GroupChallenge_RS {
	required string result = 1;
}

message GroupChallengeResult_1W {
	required bool result = 1;
	optional ProfileDelta_EV initial_info = 2; //for clients
}

message Auth_1W {
	required AuthType type = 1;
	optional string group_name = 2;
	optional string password = 3;
}

enum AuthType {
	GROUP = 0; PASSWORD = 1; NO_AUTH = 2;
}